--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,6 +12,8 @@ include: package:flutter_lints/flutter.yaml
 analyzer:
   errors:
     todo: ignore
+    implementation_imports: ignore
+    empty_catches: ignore
 
 linter:
   # The lint rules applied to this project can be customized in the
