--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -16,6 +16,7 @@ analyzer:
     empty_catches: ignore
     constant_identifier_names: ignore
     invalid_use_of_visible_for_testing_member: ignore
+    unnecessary_breaks: ignore
 
 linter:
   # The lint rules applied to this project can be customized in the
