--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.0
+  shared_preferences: ^2.3.4
   supabase_flutter: ^2.8.1
 
 dev_dependencies:
