--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  dots_indicator: ^3.0.0
   flame: ^1.22.0
   flutter:
     sdk: flutter
   provider: ^6.0.0
   shared_preferences: ^2.3.4
   supabase_flutter: ^2.8.1
+  video_player: ^2.9.2
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/tips/
     - assets/words.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
