--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -18,6 +18,7 @@ analyzer:
     invalid_use_of_visible_for_testing_member: ignore
     unnecessary_breaks: ignore
     avoid_web_libraries_in_flutter: ignore
+    curly_braces_in_flow_control_structures: ignore
 
 linter:
   # The lint rules applied to this project can be customized in the
